fixing overflow issue in template + minor visual changes

--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -25,8 +25,8 @@
         font-size: 14px;
         font-family: Verdana, sans-serif;
         text-align: right;
-        line-height: 2.5;
-        background-color: #000000;
+        line-height: 2;
+        background-color: #2a002c;
         float: right;
         padding-right: 1%;
         padding-left: 1%;
@@ -65,7 +65,8 @@ td {
 		text-align: left;
 		border-collapse: collapse;
 		font-size: 14px;
-		padding: 6px;}
+		padding: 6px;
+		white-space:nowrap;}
 
 tr:nth-child(odd) {
 		background-color: #eaeaea;
